--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11420,19 +11420,22 @@ button.close:focus {
   }
 }
 .app-login .auth-background-holder {
-  background: url('../public/background/background-1.jpg') no-repeat center center;
+  background: url('../public/background/background-1.jpg') no-repeat center
+    center;
   background-size: cover;
   height: 100vh;
   min-height: 100%;
 }
 .app-signup .auth-background-holder {
-  background: url('../public/background/background-2.jpg') no-repeat center center;
+  background: url('../public/background/background-2.jpg') no-repeat center
+    center;
   background-size: cover;
   height: 100vh;
   min-height: 100%;
 }
 .app-reset-password .auth-background-holder {
-  background: url('../public/background/background-3.jpg') no-repeat center center;
+  background: url('../public/background/background-3.jpg') no-repeat center
+    center;
   background-size: cover;
   height: 100vh;
   min-height: 100%;
